==> jpnorair/OpenTag/_backport_todo/otplatform/stm32f10x/mpipe_uart_STM32F10x.c <==
#include <otsys/config.h>
#include <otplatform.h>
#include <otsys/mpipe.h>
#include <otlib/utils.h>
#   define UARTCLK          (PLATFORM_HSCLOCK_HZ/1)
#   define __UART_CLKON()   do { RCC->APB2ENR |= RCC_APB2Periph_USART1  } while(0)
#   define __UART_CLKOFF()  do { RCC->APB2ENR &= ~RCC_APB2Periph_USART1 } while(0)
#   define UARTCLK     (PLATFORM_HSCLOCK_HZ/4)
#   define __UART_CLKON()   do { RCC->APB1ENR |= RCC_APB1Periph_USART2  } while(0)
#   define __UART_CLKOFF()  do { RCC->APB1ENR &= ~RCC_APB1Periph_USART2 } while(0)
#   define UARTCLK     (PLATFORM_HSCLOCK_HZ/4)
#   define __UART_CLKON()   do { RCC->APB1ENR |= RCC_APB1Periph_USART3  } while(0)
#   define __UART_CLKOFF()  do { RCC->APB1ENR &= ~RCC_APB1Periph_USART3 } while(0)
#   define UARTCLK     (PLATFORM_HSCLOCK_HZ/4)
#   define __UART_CLKON()   do { RCC->APB1ENR |= RCC_APB1Periph_UART4  } while(0)
#   define __UART_CLKOFF()  do { RCC->APB1ENR &= ~RCC_APB1Periph_UART4 } while(0)
#   define UARTCLK     (PLATFORM_HSCLOCK_HZ/4)
#   define __UART_CLKON()   do { RCC->APB1ENR |= RCC_APB1Periph_UART5  } while(0)
#   define __UART_CLKOFF()  do { RCC->APB1ENR &= ~RCC_APB1Periph_UART5 } while(0)
#define DIV9600     (UARTCLK/(9600))
#define DIV28800    (UARTCLK/(28800))
#define DIV57600    (UARTCLK/(57600))
#define DIV115200   (UARTCLK/(115200))
#define __UART_CLOSE()      (MPIPE_UART->CR1 &= ~(USART_CR1_UE | USART_CR1_TCIE))
#define __UART_TXOPEN()     (MPIPE_UART->CR1 |= (USART_CR1_UE | USART_Mode_Tx))

void sub_uart_portsetup() {
    /// Remap MPIPE UART port to its alternate setting (if specified)
#   if (MPIPE_REMAP == ENABLED)
        GPIO_PinRemapConfig(MPIPE_REMAP_TYPE, ENABLE);
#   endif
    
    /// Configure UART RX & TX pins as in-floating and out-push/pull
    ///@todo optimize using registers only
    {
        GPIO_InitTypeDef GPIOinit;
        
        GPIOinit.GPIO_Speed = GPIO_Speed_50MHz;
        GPIOinit.GPIO_Pin   = MPIPE_RXD_PIN;
        GPIOinit.GPIO_Mode  = GPIO_Mode_IN_FLOATING;
        GPIO_Init(MPIPE_RXD_PORT, &GPIOinit);
        
        GPIOinit.GPIO_Pin   = MPIPE_TXD_PIN;
        GPIOinit.GPIO_Mode  = GPIO_Mode_AF_PP;
        GPIO_Init(MPIPE_TXD_PORT, &GPIOinit);
    }

    
    /// MPIPE UART Interrupt: 0,3 priority (high)
    NVIC->IP[(ot_u32)MPIPE_UART_IRQn]           = b0011 << (8 - __NVIC_PRIO_BITS);
    NVIC->ISER[(ot_u32)(MPIPE_UART_IRQn>>5)]    = (1 << ((ot_u32)MPIPE_UART_IRQn & 0x1F));

    /// MPIPE DMA RX & TX interrupts get 0,3 priority (high)
    NVIC->IP[(ot_u32)MPIPE_DMA_RXIRQn]          = b0011 << (8 - __NVIC_PRIO_BITS);
    NVIC->IP[(ot_u32)MPIPE_DMA_TXIRQn]          = b0011 << (8 - __NVIC_PRIO_BITS);
    NVIC->ISER[(ot_u32)(MPIPE_DMA_RXIRQn>>5)]   = (1 << ((ot_u32)MPIPE_DMA_RXIRQn & 0x1F));
    NVIC->ISER[(ot_u32)(MPIPE_DMA_TXIRQn>>5)]   = (1 << ((ot_u32)MPIPE_DMA_RXIRQn & 0x1F));

    /// Set up DMA channels for RX and TX
    MPIPE_DMA_RXCHAN->CCR   =   DMA_DIR_PeripheralSRC       | \
                                DMA_Mode_Normal             | \
                                DMA_PeripheralInc_Disable   | \
                                DMA_MemoryInc_Enable        | \
                                DMA_PeripheralDataSize_Byte | \
                                DMA_MemoryDataSize_Byte     | \
                                DMA_Priority_VeryHigh       | \
                                DMA_M2M_Disable             | \
                                DMA_IT_TC;
    
    MPIPE_DMA_TXCHAN->CCR   =   DMA_DIR_PeripheralDST       | \
                                DMA_Mode_Normal             | \
                                DMA_PeripheralInc_Disable   | \
                                DMA_MemoryInc_Enable        | \
                                DMA_PeripheralDataSize_Byte | \
                                DMA_MemoryDataSize_Byte     | \
                                DMA_Priority_VeryHigh       | \
                                DMA_M2M_Disable             | \
                                DMA_IT_TC;
    
//  MPIPE_DMA_RXCHAN->CNDTR = 0;                    //buffer size, filled on usage
//  MPIPE_DMA_TXCHAN->CNDTR = 0;                    //buffer size, filled on usage
//  MPIPE_DMA_RXCHAN->CMAR  = (uint32_t)(NULL);     //data buffer, filled on usage
//  MPIPE_DMA_TXCHAN->CMAR  = (uint32_t)(NULL);     //data buffer, filled on usage
    MPIPE_DMA_RXCHAN->CPAR  = (uint32_t)&MPIPE_UART->DR;
    MPIPE_DMA_TXCHAN->CPAR  = (uint32_t)&MPIPE_UART->DR;
    
    /// UART Setup (RX & TX setup takes place at time of startup)
    __UART_CLKON();
    MPIPE_UART->CR1 = USART_WordLength_8b | USART_Parity_No;  
    MPIPE_UART->CR2 = USART_StopBits_1;
    MPIPE_UART->CR3 = USART_CR3_DMAR | USART_CR3_DMAT;
    MPIPE_UART->GTPR= 0;
}

ot_int mpipe_init(void* port_id) {
/// 0. "port_id" is unused in this impl, and it may be NULL
/// 1. Set all signal callbacks to NULL, and initialize other variables.
/// 2. Prepare the HW, which in this case is a UART
/// 3. Set default speed, which in this case is 115200 bps

#if (OT_FEATURE(MPIPE_CALLBACKS) == ENABLED)
    mpipe.sig_rxdone    = &otutils_sigv_null;
    mpipe.sig_txdone    = &otutils_sigv_null;
    mpipe.sig_rxdetect  = &otutils_sigv_null;
#endif
#if (MPIPE_USE_ACKS)
    mpipe.ackbuf[0] = 0xDD;     //NDEF message flags
    mpipe.ackbuf[1] = 0;        //Typelen = 0
    mpipe.ackbuf[2] = 0;        //Paylod len = 0
    mpipe.ackbuf[3] = 2;        //ID len = 2
    mpipe.ackbuf[4] = 0;
    mpipe.priority  = MPIPE_Low;
#endif
    mpipe.state     = MPIPE_Idle;
    mpipe_alp.inq   = &otmpin;
    mpipe_alp.outq  = &otmpout;

    //mpipe.sequence.ushort   = 0;          //not actually necessary
    
    sub_uart_portsetup();
    mpipe_setspeed(MPIPE_115200bps);     //default baud rate

    return 0;
}

void mpipe_setspeed(mpipe_speed speed) {
    static const ot_u16 br_lut[4] = { DIV9600, DIV28800, DIV57600, DIV115200 };
    MPIPE_UART->BRR = br_lut[(ot_u8)speed];
}

ot_int mpipe_rxndef(ot_u8* data, ot_bool blocking, mpipe_priority data_priority) {
#if (MPIPE_USE_ACKS)
    if (data_priority == MPIPE_Ack) {
        mpipe.priority  = data_priority;
        goto mpipe_rxndef_SETUP;
    }
#endif
    if (blocking) {
        mpipe_wait();
    }
    if (mpipe.state == MPIPE_Idle) {
        //mpipe.state     = MPIPE_Idle;
        mpipe_rxndef_SETUP:
        mpipe.pktbuf    = data;
        mpipe.pktlen    = 6;
    
        __DMA_RX(OFF); 
        __DMA_RXCONFIG(data, 10);
        __UART_RXOPEN();
        __DMA_RXTRIGGER();
    }
}

void mpipe_isr() {
    __DMA_RX(OFF);
    __DMA_TX(OFF);
    __DMA_ALL_CLEAR();
    
    switch (mpipe.state) {
        case MPIPE_Idle: //note, case doesn't break!
#           if ((OT_FEATURE(MPIPE_CALLBACKS) == ENABLED) && !defined(EXTF_mpipe_sig_rxdetect))
                mpipe.sig_rxdetect(0);  
#           elif defined(EXTF_mpipe_sig_rxdetect)
                mpipe_sig_rxdetect(0);
#           endif
        
        case MPIPE_RxHeader: {
            mpipe.state     = MPIPE_RxPayload;
            mpipe.pktlen   += mpipe.pktbuf[2] + MPIPE_FOOTERBYTES;
            //@todo Might need to put in a DMA Disabler here
            __DMA_RXCONFIG(mpipe.pktbuf+6, mpipe.pktlen-6);
            return;
        }
        
        case MPIPE_RxPayload: 
#           if (MPIPE_USE_ACKS)
            // ACKs must be used when Broadcast mode is off
            if (mpipe.priority != MPIPE_Broadcast) {
                // 1. On ACKs, tx() requires caller to choose state 
                // 2. Copy RX'ed sequence number into local sequence number
                // 3. Copy NACK/ACK status to 6th byte in NDEF header
                {
                    ot_u8* scratch;
                    mpipe.state                 = MPIPE_TxAck_Wait;
                    scratch                     = &mpipe.pktbuf[mpipe.pktlen-MPIPE_FOOTERBYTES];
                    mpipe.sequence.ubyte[UPPER] = *scratch++;
                    mpipe.sequence.ubyte[LOWER] = *scratch;
                }
                mpipe.ackbuf[5] = (crc16drv_block(mpipe.pktbuf, mpipe.pktlen)) ? 0x7F : 0;
                mpipe_tx(mpipe.ackbuf, False, MPIPE_Ack);
                return;
            }
#           endif
            goto mpipe_isr_RXDONE;
        
        case MPIPE_TxAck_Wait:
            // There is still data stuck in the UART.  The next interrupt will 
            // be UART TC, which uses the same ISR as DMA.
            mpipe.state++;
            return;
        
        case MPIPE_TxAck_Done: 
#           if (MPIPE_USE_ACKS)
            if (mpipe.ackbuf[5] != 0) { // TX'ed a NACK
                mpipe_rxndef(mpipe.pktbuf, False, mpipe.priority);
                mpipe.state = MPIPE_RxHeader;
                return;
            }
#           endif
            goto mpipe_isr_RXDONE;

        
        case MPIPE_Tx_Wait:
            // There is still data stuck in the UART.  The next interrupt will 
            // be UART TC, which uses the same ISR as DMA.
            mpipe.state++;
            return;
        
        case MPIPE_Tx_Done: 
#           if (MPIPE_USE_ACKS)
            if (mpipe.priority != MPIPE_Broadcast) {
                mpipe_rxndef(mpipe.ackbuf, False, MPIPE_Ack);
                mpipe.state = MPIPE_RxAck;
                return;
            }
            goto mpipe_isr_TXDONE;  // Broadcast, so no ACK
#           endif
        
        case MPIPE_RxAck: 
#           if (MPIPE_USE_ACKS)
            if (crc16drv_block(mpipe.ackbuf, 10) != 0) { //RX'ed NACK
                mpipe_tx(mpipe.pktbuf, False, mpipe.priority);
                break;
            }
#           endif
            goto mpipe_isr_TXDONE;  //RX'ed ACK
            
       default: mpipe_kill();
                return;
    }
    
    
    // This is a stack-less RX-Done subroutine
    mpipe_isr_RXDONE:
    __UART_CLOSE()
    mpipe.state = MPIPE_Idle;
#   if (MPIPE_USE_ACKS)
        mpipe.priority = MPIPE_Low;
#   endif
#   if ((OT_FEATURE(MPIPE_CALLBACKS) == ENABLED) && !defined(EXTF_mpipe_sig_rxdone))
        mpipe.sig_rxdone(0);
#   elif defined(EXTF_mpipe_sig_rxdone)
        mpipe_sig_rxdone(0);
#   endif
    return;
    
    // This is a stack-less TX-Done subroutine
    mpipe_isr_TXDONE:
    __UART_CLEAR();
    __UART_CLOSE();
    mpipe.state = MPIPE_Idle;
#   if (MPIPE_USE_ACKS)
        mpipe.priority = MPIPE_Low;
#   endif
    mpipe.sequence.ushort++;    //increment sequence on TX Done
#   if ((OT_FEATURE(MPIPE_CALLBACKS) == ENABLED) && !defined(EXTF_mpipe_sig_txdone))
        mpipe.sig_txdone(0);
#   elif defined(EXTF_mpipe_sig_txdone)
        mpipe_sig_txdone(0);
#   endif
}
