==> jpnorair/OpenTag/otplatform/msp430f5/mpipe_uart_MSP430F5.c <==
#include "OT_config.h"
#include "OT_platform.h"
#include "mpipe.h"
#define UART_CLOSE()        (MPIPE_UART->CTL1   |= UCSWRST)
#define UART_OPEN()         (MPIPE_UART->CTL1   &= ~UCSWRST)
#define UART_SET_TXIFG()    (MPIPE_UART->IFG    |= UCTXIFG)
#define UART_CLEAR_TXIFG()  (MPIPE_UART->IFG    &= ~UCTXIFG)
#define UART_SET_RXIFG()    (MPIPE_UART->IFG    |= UCRXIFG)
#define UART_CLEAR_RXIFG()  (MPIPE_UART->IFG    &= ~UCRXIFG)
#define MPIPE_DMA_RXCTL_ON          ( DMA_Mode_Single | \
                                      DMA_DestinationInc_Enable | \
                                      DMA_SourceInc_Disable | \
                                      DMA_DestinationDataSize_Byte | \
                                      DMA_SourceDataSize_Byte | \
                                      DMA_TriggerLevel_RisingEdge | \
                                      0x0014 )
#define MPIPE_DMA_RXCTL_OFF         ( DMA_Mode_Single | \
                                      DMA_DestinationInc_Enable | \
                                      DMA_SourceInc_Disable | \
                                      DMA_DestinationDataSize_Byte | \
                                      DMA_SourceDataSize_Byte | \
                                      DMA_TriggerLevel_RisingEdge | \
                                      0x0004 )

void sub_uart_portsetup() {
    // Get write-access to port mapping regs, update, re-lock
    //PM->PWD          = 0x2D52;
    //MPIPE_UART_TXMAP = MPIPE_UART_TXSIG;
    //MPIPE_UART_RXMAP = MPIPE_UART_RXSIG;
    //PM->PWD          = 0;

    MPIPE_UART_PORT->SEL   |= MPIPE_UART_PINS;      // Set pins to alternate function
  //MPIPE_UART_PORT->IE    &= ~MPIPE_UART_PINS;     // disable any interrupts on TX/RX pins
    MPIPE_UART_PORT->IFG   &= ~MPIPE_UART_PINS;     // clear any interrupt flags on TX/RX pins
    MPIPE_UART_PORT->REN   |= MPIPE_UART_RXPIN;     // Set RX pulling resistor
    MPIPE_UART_PORT->DOUT  |= MPIPE_UART_RXPIN;     // Set RX to pull-up
    MPIPE_UART_PORT->DDIR  &= ~MPIPE_UART_RXPIN;    // Set RX to input
    MPIPE_UART_PORT->DDIR  |= MPIPE_UART_TXPIN;     // Set TX to output
    MPIPE_UART_PORT->DS    |= MPIPE_UART_TXPIN;     // Set drive strength to high on TX pin
    
#   if ((MPIPE_UART_RTSPIN != NULL) && (MPIPE_UART_CTSPIN != NULL))
        MPIPE_CTS_PORT->DDIR   |= MPIPE_CTS_PIN;
      //MPIPE_RTS_PORT->DDIR   &= ~MPIPE_RTS_PIN;
        MPIPE_RTS_PORT->IE     |= MPIPE_RTS_PIN;
#   endif

    MPIPE_UART->IE   = 0;
}

ot_int mpipe_init(void* port_id) {
/// 0. "port_id" is unused in this impl, and it may be NULL
/// 1. Set all signal callbacks to NULL, and initialize other variables.
/// 2. Prepare the HW, which in this case is a UART
/// 3. Set default speed, which in this case is 115200 bps

#   if (OT_FEATURE(MPIPE_CALLBACKS) == ENABLED)
        mpipe.sig_rxdone    = &sub_signull;
        mpipe.sig_txdone    = &sub_signull;
        mpipe.sig_rxdetect  = &sub_signull;
#   endif

    //mpipe.sequence.ushort   = 0;          //not actually necessary
#   if (BOARD_FEATURE(USBCONVERTER) != ENABLED)
    mpipe.priority          = MPIPE_Low;
#   endif
    mpipe.state             = MPIPE_Idle;

    sub_uart_portsetup();
    mpipe_setspeed(MPIPE_115200bps);     //default baud rate

    return 0;
}

void mpipe_setspeed(mpipe_speed speed) {
    ot_u8* baud_data;

    /// You will need to change this baud rate matrix if
    /// you change the bit clock from SMCLK @ 6 MHz
    /// Order is [ BR0, BR1, MCTL, ... ]
    /// BR1:0 = Floor(BitCLK/BaudRate)
    /// MCTL  = Round(((BitCLK/BaudRate) - Floor(BitCLK/BaudRate)) * 8) << 1
    static const ot_u8 baud_matrix[] = { 0x71, 0x02, 0x00, 0, \
                                         0xD0, 0x00, 0x92, 0, \
                                         0x68, 0x00, 0x08, 0, \
                                         0x34, 0x00, 0x40, 0  };

#   if (MCU_FEATURE(MPIPEDMA) == ENABLED)
        MPIPE_DMAEN(OFF);
#   else
#       error "Mpipe requires a DMA in this implementation"
#   endif

    UART_CLOSE();

    // Parity off, LSB-first, 8N1, async uart
    // Use SMCLK and keep UART reset
    MPIPE_UART->CTL0 = 0;
    MPIPE_UART->CTL1 = 0x81;
    MPIPE_UART->IE   = 0;
    MPIPE_UART->IFG  = 0;
    baud_data        = (ot_u8*)&baud_matrix[speed << 2];
    MPIPE_UART->BR0  = *baud_data++;
    MPIPE_UART->BR1  = *baud_data++;
    MPIPE_UART->MCTL = *baud_data;
}

ot_int mpipe_rxndef(ot_u8* data, ot_bool blocking, mpipe_priority data_priority) {

#   if (BOARD_FEATURE(USBCONVERTER) != ENABLED)
        if (data_priority != MPIPE_Ack) {
            if (mpipe.state != MPIPE_Idle) {
                return -1;
            }
            mpipe.priority  = data_priority;
            mpipe.pktbuf    = data;
            mpipe.pktlen    = 6;
        }
#   else
        if (mpipe.state != MPIPE_Idle) {
            return -1;
        }
        mpipe.pktbuf    = data;
        mpipe.pktlen    = 6;
#   endif

    mpipe.state = MPIPE_Idle;
    MPIPE_DMAEN(OFF);
    
#   ifndef MPIPE_RTS_PORT  
        sub_activate_rx();
#   endif

    return 0;
#else
#endif
}

void mpipe_isr() {
/// MPipe is state-based.  Depending on the MPipe implementation and the HW
/// implementation of the DMA+UART, state transitions may happen differently.
/// <LI> In typical RX, there is a header detection event that sets-up a second
///      RX process for downloading the rest of the packet.  When the DMA is
///      done, the process completes.  </LI>
/// <LI> For TX, there is a wait-state needed while the HW UART finishes
///      sending the DMA buffered data (two bytes). </LI>
/// <LI> If MPipe does not have HW acks, then software can be used to manage
///      Acks.  In this case, a complete TX process also requires RX'ing an
///      Ack, and a complete RX process requires TX'ing an Ack. </LI>

    switch (mpipe.state) {
        case MPIPE_Idle: //Note, case might not break
            CALLBACK_rxdetect(0);
#           ifdef MPIPE_RTS_PORT
                MPIPE_CTS_PORT->DOUT   |= MPIPE_CTS_PIN;
                sub_activate_rx();
                break;
#           endif
            
        case MPIPE_RxHeader: {
            mpipe.state     = MPIPE_RxPayload;
            mpipe.pktlen   += mpipe.pktbuf[2] + MPIPE_FOOTERBYTES;
            //@todo Might need to put in a DMA Disabler here
            MPIPE_DMA_RXCONFIG(mpipe.pktbuf+6, mpipe.pktlen-6, ON);
            break;
        }

        case MPIPE_RxPayload:
#           if (BOARD_FEATURE(USBCONVERTER) != ENABLED)
            if (mpipe.priority != MPIPE_Broadcast) {
                // Copy RX'ed seq into ACK
                ot_u8*  seq_val             = &mpipe.pktbuf[mpipe.pktlen-MPIPE_FOOTERBYTES];
                mpipe.sequence.ubyte[UPPER] = *seq_val++;
                mpipe.sequence.ubyte[LOWER] = *seq_val;

                mpipe.ackbuf[0] = 0xDD;     //NDEF message flags
                mpipe.ackbuf[1] = 0;        //Typelen = 0
                mpipe.ackbuf[2] = 0;        //Paylod len = 0
                mpipe.ackbuf[3] = 2;        //ID len = 2
                mpipe.ackbuf[4] = 0;
                mpipe.ackbuf[5] = (platform_crc_block(mpipe.pktbuf, mpipe.pktlen)) ? 0x7F : 0;

                mpipe_txndef(mpipe.ackbuf, False, MPIPE_Ack);
                mpipe.state = MPIPE_TxAck_Wait;
                break;
            }
#           endif
            // Broadcast, so no ACK
            sub_rxdone();
            break;

        case MPIPE_TxAck_Wait:
        	//goto mpipe_isr_Tx_Wait;

        case MPIPE_TxAck_Done:  // TX'ed an ACK
        	//MPIPE_UART->IE = 0;
#           if (BOARD_FEATURE(USBCONVERTER) != ENABLED)
            if (mpipe.ackbuf[5] != 0) { // TX'ed a NACK
                mpipe_rxndef(mpipe.pktbuf, False, mpipe.priority);
                mpipe.state = MPIPE_RxHeader;
                break;
            }
#           endif
            sub_rxdone();
            break;

        case MPIPE_Tx_Wait:
        //mpipe_isr_Tx_Wait:
        	//MPIPE_UART->IE = UCTXIE;
            //break;

        case MPIPE_Tx_Done:
        	//MPIPE_UART->IE = 0;
#           if (BOARD_FEATURE(USBCONVERTER) != ENABLED)
        	if (mpipe.priority != MPIPE_Broadcast) {
                mpipe_rxndef(mpipe.ackbuf, False, MPIPE_Ack);
                mpipe.state = MPIPE_RxAck;
                break;
            }
#       	endif
            sub_txdone();  // Broadcast, so no ACK
        	break;

        case MPIPE_RxAck:
#           if (BOARD_FEATURE(USBCONVERTER) != ENABLED)
            if (platform_crc_block(mpipe.ackbuf, 10) != 0) { //RX'ed NACK
                mpipe_txndef(mpipe.pktbuf, False, mpipe.priority);
                break;
            }
#           endif
            //RX'ed ACK
            sub_txdone();
            break;
    }
}
